tests/transpiler/x/fs/group_items_iteration.error
exit status 1
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/transpiler/x/fs/group_items_iteration.fs(5,13): error FS0010: Unexpected keyword 'val' in field declaration. Expected identifier or other token.

/workspace/mochi/tests/transpiler/x/fs/group_items_iteration.fs(9,13): error FS0010: Unexpected keyword 'val' in field declaration. Expected identifier or other token.

/workspace/mochi/tests/transpiler/x/fs/group_items_iteration.fs(22,38): error FS0010: Unexpected keyword 'val' in expression. Expected '}' or other token.

/workspace/mochi/tests/transpiler/x/fs/group_items_iteration.fs(22,25): error FS0604: Unmatched '{'

/workspace/mochi/tests/transpiler/x/fs/group_items_iteration.fs(24,5): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (23:16). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/transpiler/x/fs/group_items_iteration.fs(24,5): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (23:16). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/transpiler/x/fs/group_items_iteration.fs(25,5): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (23:16). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/transpiler/x/fs/group_items_iteration.fs(25,5): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (23:16). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/transpiler/x/fs/group_items_iteration.fs(30,20): error FS0599: Missing qualification after '.'

/workspace/mochi/tests/transpiler/x/fs/group_items_iteration.fs(30,21): error FS0010: Unexpected keyword 'val' in expression

/workspace/mochi/tests/transpiler/x/fs/group_items_iteration.fs(32,71): error FS0010: Unexpected symbol ']' in expression. Expected incomplete structured construct at or before this point or other token.

/workspace/mochi/tests/transpiler/x/fs/group_items_iteration.fs(27,1): error FS3106: Unexpected end of input in 'for' expression. Expected 'for <pat> in <expr> do <expr>'.
